[tool.poetry]
name = "diffusion"
version = "0.1.0"
description = ""
authors = ["Võ Đình Đạt <vodinhdat03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
lightning = "^2.1.3"
einops = "^0.7.0"
torchvision = "^0.17.0"
wandb = "^0.16.3"
torchaudio = "^2.2.0"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"