[tool.poetry]
name = "diffusion"
version = "0.1.0"
description = ""
authors = ["Võ Đình Đạt <vodinhdat03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
lightning = "*"
einops = "^0.7.0"
torchvision = "*"
wandb = "^0.16.3"
torchaudio = "*"
tqdm = "^4.66.2"
timm = "^0.9.12"
gradio = "^4.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"